fix Fixed other bugs like , two toast notification and rounded scrollbar

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -764,6 +764,7 @@ span {
 ::-webkit-scrollbar-thumb {
   background: #888;
   cursor: pointer;
+  border-radius: 5px; 
 }
 
 .env-highlight {
